@@ -5,13 +5,9 @@ param(
   [string]$url
 )
 
-. ../shared_windows.ps1
-
-$java = find-tool("java")
-
-& $java `
+java `
   --enable-native-access=ALL-UNNAMED `
-  --add-modules jdk.incubator.foreign `
+  --enable-preview --source=19 `
   -D"java.library.path=$curlpath\bin" `
   CurlMain.java `
   $url
